--- a/#source/scss/structure/footer.scss
+++ b/#source/scss/structure/footer.scss
@@ -139,15 +139,19 @@
 .footer__bottom-image:hover {
 	transform: translate(0, -15px);
 }
-.footer__bottom-image:before {
-	content: "";
-	@include wh(13px, 25px);
-	position: absolute;
-	top: 15px;
-	left: 50%;
-	transform: translate(-50%);
-	background: url("../assets/images/footer/arrow2.png") center/ cover no-repeat;
+.footer__bottom-image{
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items:center;
+	
+	
 }
+.footer__bottom-image-img{
+	background: url("../assets/images/footer/arrow2.png")no-repeat center/cover;
+	@include wh(13px,25px);
+}
+
 @media (max-width: 1200px) {
 	.footer__title{
 		text-align: center;
