--- a/css/index.css
+++ b/css/index.css
@@ -110,7 +110,7 @@ body {
 font-family:Muli-ExtraBold;
 }
 
-.blog__image img,.header,.story__image img {
+.blog__image img,.header{
 position:absolute;
 top:0;
 left:0;
@@ -135,7 +135,7 @@ left:0;
 	justify-content: center;
 }
 
-.blog__wrapper,.story__wrapper {
+.blog__wrapper, {
 display:flex;
 -webkit-box-orient:vertical;
 -webkit-box-direction:normal;
@@ -702,22 +702,22 @@ background:url(../assets/images/header/Arrow.png) center/cover no-repeat;
 	align-items: center;
 }
 }
-.products{
-	padding: 50px 0;
-}
+
 
 .products__row {
 display:flex;
 }
 
 .products__column {
-	
+	padding: 50px 0;
+    text-align: center;
 -webkit-box-flex:1;
 -ms-flex:1 0 25%;
 flex:1 0 25%;
 	justify-content: center;
 	background-color:#62291a;
 }
+
 
 
 
@@ -739,7 +739,7 @@ border:1px solid #000;
 }
 
 .products__image {
-	text-align:center;
+	margin-bottom: 25px;
 }
 
 .products__column:hover .products__image img {
@@ -759,6 +759,8 @@ text-align:center;
 }
 
 .products__text {
+	display: block;
+	margin-bottom: 25px;
 color:#fff;
 font-style:italic;
 font-family:Muli-Regular;
@@ -766,7 +768,6 @@ margin-top:10px;
 -webkit-box-flex:1;
 -ms-flex:1 1 auto;
 flex:1 1 auto;
-border:1px solid #000;
 }
 
 .products__bth {
@@ -791,8 +792,29 @@ display:inline-block;
 background:url(../assets/images/products/Arrow.png) center/cover no-repeat;
 }
 
+
+@media screen and (max-width:992px) {
+	.products__row {
+		flex-wrap: wrap;
+	}
+	.products__column{
+		flex: 1 0 50%;
+	}
+}
+
+@media screen and (max-width:576px) {
+	.products__column{
+		flex: 1 1 100%;
+	}
+}
+
 .story {
-margin:120px 0 160px;
+	padding: 120px 0 160px 0 ;
+}
+
+.story__row{
+	display: flex;
+	padding: 0 15px;
 }
 
 .content__story {
@@ -801,23 +823,12 @@ margin:0 auto;
 }
 
 .story__column {
--webkit-box-flex:1;
--ms-flex:1 0 50%;
-flex:1 0 50%;
-border:1px solid #000;
-}
-
-.story__column:first-child {
-margin-top:145px;
-padding-left:20px;
+	padding: 150px 15px 50px 15px;
 }
 
 .story__text {
--webkit-box-flex:1;
--ms-flex:1 1 auto;
-flex:1 1 auto;
-margin:60px 0;
-padding:0 135px 0 0;
+	margin-bottom: 50px;
+	max-width: 1000px;
 }
 
 .storu__bth {
@@ -828,18 +839,56 @@ padding:1.6rem 0;
 }
 
 .story__image {
-width:100%;
-height:100%;
-padding:0 0 92.31%;
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+.story__image img{
+	width: 100%;
+	height: 100%;
+	min-height: 600px;
+	object-fit: cover;
+	object-position: center;
 }
 
-.story__image--stamp {
-width:50%;
-height:50%;
-position:absolute;
-top:25px;
-left:-120px;
-border:3px solid #4f1ba3;
+
+.story__image::after{
+	content:'';
+	width: 100%;
+	height: 100%;
+	position:absolute;
+	top:0;
+	left:-155px;
+	background: url(../assets/images/story/Stamp.png) no-repeat ;
+}
+
+@media screen and (max-width:992px) {
+	.story__row{
+		flex-direction: column;
+	}	
+	.story__image::after{
+		display: none;
+	}
+	.story__image img{
+		min-height: 400px;
+	}
+	.story__column {
+		padding: 50px 15px 25px 15px;
+		text-align: center;
+	}
+	.story__title{
+		text-align: center;
+	}
+	.story__text {
+		margin-bottom: 25px;
+		text-align: center;
+	}
+	
+	.storu__bth {
+	width:30rem;
+	text-indent:-3rem;
+	padding:1.6rem 0;
+	}
 }
 
 .testimonials__wrapper {
@@ -1243,12 +1292,12 @@ color:red;
 background-color:#FF0;
 }
 
-.smoothies__wrapper,.story__wrapper {
+.smoothies__wrapper{
 height:100%;
 }
 
 
-.story__row,.footer__row {
+.footer__row {
 display:flex;
 }
 
@@ -1539,10 +1588,6 @@ left:0;
 -webkit-box-flex:1;
 -ms-flex:1 1 100%;
 flex:1 1 100%;
-}
-
-.story__column:nth-child(2) {
-margin-top:25px;
 }
 
 .story__text {
