--- a/css/index.css
+++ b/css/index.css
@@ -1113,7 +1113,6 @@ overflow-y:hidden;
 }
 
 .instagram__image {
-position:relative;
 width:20%;
 min-width:200px;
 -webkit-transition-duration:1s;
@@ -1124,8 +1123,6 @@ transition-duration:1s;
 .instagram__image img {
 width:100%;
 height:100%;
-overflow-x:visible;
-overflow-y:visible;
 }
 
 .instagram__image:hover {
@@ -1149,14 +1146,16 @@ right:20px;
 .footer {
 background-color:#faaa3f;
 }
-
+.footer__row{
+	padding: 80px 15px 25px 15px;
+}
 .footer__column {
 -webkit-box-flex:1;
 -ms-flex:1 0 25%;
 flex:1 0 25%;
-border:1px solid #000;
-margin:80px 0 95px;
 }
+
+
 
 .footer__column:first-child {
 -ms-flex-item-align:center;
@@ -1180,9 +1179,7 @@ color:#6d450c;
 }
 
 .footer-icon__list {
-border:1px solid #000;
 display:flex;
-margin:0 -10px;
 }
 
 .footer-icon__item {
@@ -1191,14 +1188,12 @@ margin:0 10px;
 
 .input {
 margin-bottom:35px;
-border:1px solid #000;
 }
 
 .input__search {
 width:90%;
 height:60px;
 border-radius:35px;
-border:1px solid rgba(0,0,0,0);
 -webkit-transition:border 1s ease,-webkit-box-shadow 1s ease;
 -o-transition:border 1s ease,box-shadow 1s ease;
 transition:border 1s ease,box-shadow 1s ease,-webkit-box-shadow 1s ease;
@@ -1209,17 +1204,15 @@ border:1px solid #888686;
 -webkit-box-shadow:1px 2px 4px #000;
 box-shadow:1px 2px 4px #000;
 }
-
 .input__image {
-width:40px;
+width:30px;
 height:20px;
 position:absolute;
 top:50%;
-left:5%;
+left:45px;
 -webkit-transform:translatey(-50%);
 -ms-transform:translatey(-50%);
 transform:translatey(-50%);
-border:1px solid #000;
 }
 
 [placeholder="Subscribe to our newsletter"] {
@@ -1238,7 +1231,6 @@ justify-content:center;
 .footer__text {
 font-size:18px;
 color:#6d450c;
-border:1px solid #000;
 }
 
 .footer__text span:before {
@@ -1271,29 +1263,21 @@ font:13px Muli-Bold;
 -ms-flex-positive:0.5;
 flex-grow:0.5;
 text-align:right;
-border:1px solid #000;
 color:#af8a82;
 }
 
-.footer__bottom-text {
-border:1px solid #000;
--webkit-box-flex:0.44;
--ms-flex-positive:0.44;
-flex-grow:0.44;
-text-align:right;
-}
 
 .footer__bottom-image {
 width:50px;
 height:50px;
-top:-30px;
-right:0;
+bottom:30px;
+right:30px;
 border-radius:5px;
 background-color:#f2662f;
 -webkit-transition:0 500ms cubic-bezier(0.17,0.67,0.6,1.31);
 -o-transition:transform 500ms cubic-bezier(0.17,0.67,0.6,1.31);
 transition:transform 500ms cubic-bezier(0.17,0.67,0.6,1.31),-webkit-transform 500ms cubic-bezier(0.17,0.67,0.6,1.31);
-position:relative;
+position:fixed;
 display:flex;
 -webkit-box-pack:center;
 -ms-flex-pack:center;
@@ -1303,6 +1287,17 @@ justify-content:center;
 align-items:center;
 }
 
+.footer__bottom-image:after{
+	content:"Go top";
+	position: absolute;
+	top: 50%;
+	left: -60px;
+	transform: translateY(-50%);
+	font-size: 20px;
+	color: #fff;
+	text-shadow: 0 0 3px #000;
+}
+
 .footer__bottom-image:hover {
 -webkit-transform:translate(0,-15px);
 -ms-transform:translate(0,-15px);
@@ -1310,9 +1305,9 @@ transform:translate(0,-15px);
 }
 
 .footer__bottom-image-img {
-background:url(../assets/images/footer/arrow2.png) no-repeat center/cover;
-width:13px;
-height:25px;
+	background:url(../assets/images/footer/arrow2.png) no-repeat center/cover;
+	width:13px;
+	height:25px;
 }
 
 :active,:focus,a:active,a:focus {
@@ -1432,7 +1427,6 @@ flex-wrap:wrap;
 -webkit-box-flex:1;
 -ms-flex:1 0 50%;
 flex:1 0 50%;
-border:1px solid #000;
 margin:25px 0;
 }
 
@@ -1454,7 +1448,6 @@ display:block;
 position:relative;
 top:0;
 left:0;
-border:1px solid #000;
 display:inline-block;
 }
 
@@ -1593,7 +1586,6 @@ flex:1 1 100%;
 position:relative;
 top:75px;
 left:0;
-border:1px solid #000;
 margin:0 1.0416666667% 0 0;
 }
 
@@ -1734,3 +1726,45 @@ flex:1 1 100%;
 }
 }
 
+@media screen and (max-width:992px) {
+	.footer__row{
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.footer__column:nth-child(1){
+		margin-bottom: 35px;
+		text-align: center;
+		flex: 1 0 100%;
+	}
+	.footer__title{
+		text-align: center;
+	}
+	.footer__column:nth-child(2),
+	.footer__column:nth-child(3){
+		margin-bottom: 35px;
+		text-align: center;
+		margin-right: 0;
+		flex: 1 0 50%;
+	}
+	.footer-icon__list {
+		justify-content: center;
+	}
+	.input{
+		text-align: center;
+	}
+	.footer__wrap-row{
+		margin-top: 50px;
+	}
+	
+}
+
+@media screen and (max-width:576px) {
+	.footer__column:nth-child(2),
+	.footer__column:nth-child(3){
+		margin-bottom: 35px;
+		text-align: center;
+		margin-right: 0;
+		flex: 1 0 100%;
+	}
+	
+}
