--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,10 @@ align-items:center;
 display:flex;
 }
 
+.nav__item{
+	display: inline-block;
+}
+
 .nav__item:not(:last-of-type) {
 	margin-right: 35px;
 }
