--- a/css/index.css
+++ b/css/index.css
@@ -144,8 +144,9 @@ padding-top:70px;
 }
 
 .conteiner {
-max-width:1750px;
+max-width:1780px;
 height:100%;
+padding: 0 15px;
 margin:0 auto;
 }
 
@@ -612,6 +613,7 @@ border-left:1px solid #ddd6cad5;
 
 .about__wrap-img{
 	height: 200px;
+	perspective: 1500px;
 }
 
 .about__image{
