--- a/css/index.css
+++ b/css/index.css
@@ -619,6 +619,7 @@ border-left:1px solid #ddd6cad5;
 .about__image{
 	position: relative;
 	top: 30px;
+	z-index: 100;
 }
 
 .about__description {
@@ -1215,7 +1216,7 @@ width:30px;
 height:20px;
 position:absolute;
 top:50%;
-left:45px;
+left:35px;
 -webkit-transform:translatey(-50%);
 -ms-transform:translatey(-50%);
 transform:translatey(-50%);
